--- a/Spotify/ViewControllers/Profile/ProfileViewController.storyboard
+++ b/Spotify/ViewControllers/Profile/ProfileViewController.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Y6W-OH-hqX">
-    <device id="retina6_12" orientation="portrait" appearance="light"/>
+    <device id="ipad7_9" orientation="portrait" layout="fullscreen" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -12,15 +12,126 @@
             <objects>
                 <viewController storyboardIdentifier="ProfileViewController" id="Y6W-OH-hqX" customClass="ProfileViewController" customModule="Spotify" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5EZ-qb-Rvc">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="744" height="1133"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view alpha="0.80000000000000004" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zsR-wB-BbZ">
+                                <rect key="frame" x="0.0" y="24" width="744" height="453"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="EMM-0u-Upt">
+                                        <rect key="frame" x="302" y="108.5" width="140" height="140"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="EMM-0u-Upt" secondAttribute="height" multiplier="1:1" id="ISr-vp-MdZ"/>
+                                            <constraint firstAttribute="height" constant="140" id="brB-YB-TmI"/>
+                                        </constraints>
+                                    </imageView>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taylor Swift" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BK9-gz-csq">
+                                        <rect key="frame" x="8" y="264.5" width="728" height="27.5"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="17"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                        <variation key="heightClass=regular-widthClass=regular">
+                                            <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="20"/>
+                                        </variation>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="12" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iS5-6V-EZp">
+                                        <rect key="frame" x="302" y="330" width="140" height="21"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Bold" family="Avenir Next" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Followers" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xre-wn-smG">
+                                        <rect key="frame" x="302" y="359" width="140" height="20.5"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="140" id="sTz-fr-ETg"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.21568627450980393" blue="0.2627450980392157" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="iS5-6V-EZp" firstAttribute="centerX" secondItem="zsR-wB-BbZ" secondAttribute="centerX" id="0gl-UU-IhG"/>
+                                    <constraint firstAttribute="trailing" secondItem="BK9-gz-csq" secondAttribute="trailing" constant="8" id="7dW-Lo-sR0"/>
+                                    <constraint firstItem="iS5-6V-EZp" firstAttribute="top" secondItem="BK9-gz-csq" secondAttribute="bottom" constant="38" id="FhT-yv-WT9"/>
+                                    <constraint firstItem="Xre-wn-smG" firstAttribute="centerX" secondItem="zsR-wB-BbZ" secondAttribute="centerX" id="KhU-G9-P0i"/>
+                                    <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Xre-wn-smG" secondAttribute="bottom" constant="8" id="Qyb-8H-QOz"/>
+                                    <constraint firstItem="Xre-wn-smG" firstAttribute="top" secondItem="iS5-6V-EZp" secondAttribute="bottom" constant="8" id="Tbv-HE-dXO"/>
+                                    <constraint firstItem="iS5-6V-EZp" firstAttribute="width" secondItem="Xre-wn-smG" secondAttribute="width" id="jrT-qu-5bb"/>
+                                    <constraint firstItem="BK9-gz-csq" firstAttribute="top" secondItem="EMM-0u-Upt" secondAttribute="bottom" constant="16" id="lni-nP-axq"/>
+                                    <constraint firstItem="EMM-0u-Upt" firstAttribute="centerY" secondItem="zsR-wB-BbZ" secondAttribute="centerY" constant="-48" id="uJ0-6Z-zoJ"/>
+                                    <constraint firstItem="BK9-gz-csq" firstAttribute="leading" secondItem="zsR-wB-BbZ" secondAttribute="leading" constant="8" id="ypH-T8-uxZ"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Taylor Swift.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pOs-Xr-UlQ">
+                                <rect key="frame" x="96" y="501" width="624" height="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pqG-Ia-Gex">
+                                <rect key="frame" x="24" y="501" width="64" height="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="G80-wI-MH3"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Taylor Swift" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iL0-b5-TAo">
+                                <rect key="frame" x="96" y="547" width="82.5" height="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plan:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="v9R-JE-bvA">
+                                <rect key="frame" x="24" y="547" width="64" height="22"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="64" id="fWE-ZC-QLl"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="16"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="vDu-zF-Fre"/>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="zsR-wB-BbZ" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" id="5aY-Q1-aFv"/>
+                            <constraint firstItem="pOs-Xr-UlQ" firstAttribute="centerY" secondItem="pqG-Ia-Gex" secondAttribute="centerY" id="5qf-Dg-Q0e"/>
+                            <constraint firstItem="pqG-Ia-Gex" firstAttribute="leading" secondItem="vDu-zF-Fre" secondAttribute="leading" constant="24" id="EuW-8w-sYZ"/>
+                            <constraint firstItem="pOs-Xr-UlQ" firstAttribute="leading" secondItem="pqG-Ia-Gex" secondAttribute="trailing" constant="8" id="LUA-26-dJd"/>
+                            <constraint firstItem="pqG-Ia-Gex" firstAttribute="top" secondItem="zsR-wB-BbZ" secondAttribute="bottom" constant="24" id="Te5-8J-ERf"/>
+                            <constraint firstItem="iL0-b5-TAo" firstAttribute="leading" secondItem="v9R-JE-bvA" secondAttribute="trailing" constant="8" id="U96-hg-mq1"/>
+                            <constraint firstItem="zsR-wB-BbZ" firstAttribute="height" secondItem="5EZ-qb-Rvc" secondAttribute="height" multiplier="0.4" id="X23-56-cU0"/>
+                            <constraint firstItem="v9R-JE-bvA" firstAttribute="leading" secondItem="pqG-Ia-Gex" secondAttribute="leading" id="ava-nS-RU0"/>
+                            <constraint firstItem="zsR-wB-BbZ" firstAttribute="top" secondItem="vDu-zF-Fre" secondAttribute="top" id="bfj-A6-bTZ"/>
+                            <constraint firstItem="EMM-0u-Upt" firstAttribute="centerX" secondItem="vDu-zF-Fre" secondAttribute="centerX" id="dlM-tv-L8q"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="pOs-Xr-UlQ" secondAttribute="trailing" constant="24" id="dsc-kT-iyV"/>
+                            <constraint firstItem="v9R-JE-bvA" firstAttribute="top" secondItem="pOs-Xr-UlQ" secondAttribute="bottom" constant="24" id="f0P-na-NG7"/>
+                            <constraint firstItem="iL0-b5-TAo" firstAttribute="centerY" secondItem="v9R-JE-bvA" secondAttribute="centerY" id="gRc-K1-fBF"/>
+                            <constraint firstItem="vDu-zF-Fre" firstAttribute="trailing" secondItem="zsR-wB-BbZ" secondAttribute="trailing" id="l2x-2U-CM8"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="displayNameLabel" destination="BK9-gz-csq" id="YCC-Ic-cUe"/>
+                        <outlet property="emailLabel" destination="pOs-Xr-UlQ" id="MWu-WL-jQ4"/>
+                        <outlet property="followCountLabel" destination="iS5-6V-EZp" id="cp7-Ue-Etj"/>
+                        <outlet property="gradientView" destination="zsR-wB-BbZ" id="aVp-4R-kOh"/>
+                        <outlet property="imageView" destination="EMM-0u-Upt" id="qmB-AT-Ccy"/>
+                        <outlet property="planLabel" destination="iL0-b5-TAo" id="0zs-mI-muU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ief-a0-LHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="117" y="4"/>
+            <point key="canvasLocation" x="116.79389312977099" y="3.5211267605633805"/>
         </scene>
     </scenes>
 </document>
